--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,5 @@
 .mainHeader {
-    background-color: #243b55;
+    background-color: #5c0000;
     color: #fff;
     padding: 1rem;
     display: flex;
@@ -34,7 +34,7 @@
   .mainNav ul li a:hover,
   .mainNav ul li a.active {
     color: #fff;
-    border-bottom: 2px solid #63b3ed;
+    border-bottom: 2px solid #b90000;
   }
   
   .userInfo {
@@ -49,6 +49,6 @@
   .userAvatar {
     width: 40px;
     height: 40px;
-    background-color: #63b3ed;
+    background-color: #6b0000;
     border-radius: 50%;
   }
