--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,19 +1,20 @@
 .sidebar {
-    width: 100%;
-    background-color: #2c5282;
+    width: 20%;
+    background-color: #5c0000;
     color: #fff;
     padding: 1rem 0;
   }
   
   .sidebarHeader {
     padding: 0 1.5rem 1rem;
-    border-bottom: 1px solid #3182ce;
+    border-bottom: 1px solid #d10000;
   }
   
   .sidebarMenu ul {
     list-style: none;
     margin-top: 1rem;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
   }
   
@@ -33,6 +34,6 @@
   
   .sidebarMenu ul li a:hover,
   .sidebarMenu ul li a.active {
-    background-color: #3182ce;
+    background-color: #a00000;
     color: #fff;
   }
