feat: create cards

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,6 +1,6 @@
 .sidebar {
     width: 20%;
-    background-color: #5c0000;
+    background-color: #7a0000;
     color: #fff;
     padding: 1rem 0;
   }
